<resources>
    <string name="app_name">Yu_Diary</string>
    
    <string name="calendar">日历</string>
    <string name="backlog">待办</string>
    <string name="diary">日记</string>
    <string name="data">数据</string>
    <string name="me">我的</string>

    <string name="loading">加载中</string>

    <string name="not_logged_in">未登录</string>
    <string name="target">目标</string>
    <string name="collection">收藏</string>
    <string name="mood">编辑心情</string>
    <string name="movement">编辑运动</string>
    <string name="setting">设置</string>
    
    <string name="there_is_no_schedule">没有日程</string>
</resources>