<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/calendar"
        android:title="@string/calendar"/>
    
    <item
        android:id="@+id/navigation_backlog"
        android:icon="@drawable/backlog"
        android:title="@string/backlog"/>
    
    <item
        android:id="@+id/navigation_diary"
        android:icon="@drawable/diary"
        android:title="@string/diary"/>
    
    <item
        android:id="@+id/navigation_data"
        android:icon="@drawable/data"
        android:title="@string/data"/>
    
    <item
        android:id="@+id/navigation_me"
        android:icon="@drawable/me"
        android:title="@string/me"/>

</menu>
