<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <RadioGroup
        android:id="@+id/rg_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_tab_bg"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_calendar"
            style="@style/bottom_tag_style"
            android:drawableTop="@drawable/rb_calendar_drawable_selector"
            android:gravity="center"
            android:text="@string/calendar" />

        <RadioButton
            android:id="@+id/rb_backlog"
            style="@style/bottom_tag_style"
            android:drawableTop="@drawable/rb_backlog_drawable_selector"
            android:gravity="center"
            android:text="@string/backlog" />

        <RadioButton
            android:id="@+id/rb_diary"
            style="@style/bottom_tag_style"
            android:drawableTop="@drawable/rb_diary_drawable_selector"
            android:gravity="center"
            android:text="@string/diary" />

        <RadioButton
            android:id="@+id/rb_data"
            style="@style/bottom_tag_style"
            android:drawableTop="@drawable/rb_data_drawable_selector"
            android:gravity="center"
            android:text="@string/data" />

        <RadioButton
            android:id="@+id/rb_me"
            style="@style/bottom_tag_style"
            android:drawableTop="@drawable/rb_me_drawable_selector"
            android:gravity="center"
            android:text="@string/me" />
    </RadioGroup>
</LinearLayout>