<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/me_bg"
    android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ToolbarThemeBlackText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_me_header_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/me_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.xuexiang.xui.widget.imageview.RadiusImageView
            android:id="@+id/radiusImageView"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:src="@drawable/head_one"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="@+id/iv_me_header_bg"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:riv_is_circle="true" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="130dp"
            android:text="@string/not_logged_in"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_me_header_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_target"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/iv_me_header_bg">

            <com.xuexiang.xui.widget.imageview.RadiusImageView
                android:id="@+id/radiusImageView2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:maxWidth="23dp"
                android:src="@drawable/target"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:text="@string/target"
                android:textSize="23sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/radiusImageView2"
                app:layout_constraintTop_toTopOf="@+id/radiusImageView2" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
                app:layout_constraintBottom_toBottomOf="@+id/radiusImageView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/radiusImageView2" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_collection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/cl_target">

            <com.xuexiang.xui.widget.imageview.RadiusImageView
                android:id="@+id/iv_collection"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:maxWidth="23dp"
                android:src="@drawable/collection"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:text="@string/collection"
                android:textSize="23sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_collection"
                app:layout_constraintTop_toTopOf="@+id/iv_collection" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
                app:layout_constraintBottom_toBottomOf="@+id/iv_collection"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/iv_collection" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_mood"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/cl_collection">

            <com.xuexiang.xui.widget.imageview.RadiusImageView
                android:id="@+id/iv_mood"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:maxWidth="23dp"
                android:src="@drawable/mood"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:text="@string/mood"
                android:textSize="23sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_mood"
                app:layout_constraintTop_toTopOf="@+id/iv_mood" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
                app:layout_constraintBottom_toBottomOf="@+id/iv_mood"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/iv_mood" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_movement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/cl_mood">

            <com.xuexiang.xui.widget.imageview.RadiusImageView
                android:id="@+id/iv_movement"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:maxWidth="23dp"

                android:src="@drawable/movement"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:text="@string/movement"
                android:textSize="23sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_movement"
                app:layout_constraintTop_toTopOf="@+id/iv_movement" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
                app:layout_constraintBottom_toBottomOf="@+id/iv_movement"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/iv_movement" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/cl_movement">

            <com.xuexiang.xui.widget.imageview.RadiusImageView
                android:id="@+id/iv_setting"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:maxWidth="23dp"
                android:src="@drawable/settting"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:text="@string/setting"
                android:textSize="23sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_setting"
                app:layout_constraintTop_toTopOf="@+id/iv_setting" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
                app:layout_constraintBottom_toBottomOf="@+id/iv_setting"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/iv_setting" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>